# DataLake

./: .gitignore  App.tsx  README.md  generate_diagrams.py  jest.config.js  jest.setup.js  package-lock.json  package.json
__tests__/: App.test.tsx
android/: build.gradle  build_log.txt  gradle.properties
android/app/: build.gradle  proguard-rules.pro
android/app/release/: output-metadata.json
android/app/release/baselineProfiles/0/: app-arm64-v8a-release.dm
android/app/release/baselineProfiles/1/: app-arm64-v8a-release.dm
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/datalakeedge/: FaceAuthModule.kt  FaceAuthPackage.kt  MainApplication.kt
android/app/src/main/jni/: CMakeLists.txt  OnLoad.cpp  face_processor.cpp
android/app/src/main/res/values/: colors.xml
patches/: react-native-vision-camera+4.6.4.patch  react-native-worklets-core+1.6.3.patch
src/components/: ErrorBoundary.tsx  FaceGuideOverlay.tsx  LogItem.tsx  MetricCard.tsx  NHAILogo.tsx
src/navigation/: AppNavigator.tsx
src/screens/: AuthScreen.tsx  DashboardScreen.tsx  LogsScreen.tsx  RegisterScreen.tsx  SplashScreen.tsx
src/services/: database.ts  faceAuth.ts
src/theme/: index.ts
